stability improvements
