# api_serv/src/users/models.py
@@ -1,10 +1,13 @@
-from datetime import datetime
+import os
+from datetime import datetime, date
 from typing import List, Optional
 
 from pydantic import BaseModel, Field
 from starlette.responses import JSONResponse
 
-from orm import User, UserAddress, UserSchedule
+from orm.users import UserAddress, UserSchedule
+from orm.utils import User
+from users.utils import has_cold_start
 
 
 class SettingsUpdated(JSONResponse):
@@ -18,45 +21,38 @@ class SettingsUpdated(JSONResponse):
         )
 
 
-class DemoUser(BaseModel):
-    id: int = Field(..., title="")
-    gender: int = Field(..., title="")
-    name: str = Field(..., title="")
-    surname: str = Field(..., title="")
-    birthdate: str = Field(..., title="")
-    coldStart: bool = Field(..., title="")
-
-    @classmethod
-    def build_from_db(cls, obj: User) -> 'DemoUser':
-        return cls(
-            id=obj.id,
-            name=obj.bio.name,
-            surname=obj.bio.surname,
-            birthdate=obj.bio.birthdate,
-            coldStart=False if obj.profile.workdata.group_scores else True
-        )
-
-
 class GetUserResponse(BaseModel):
     id: int = Field(..., title="")
-    created: datetime = Field(..., title="")
     gender: int = Field(..., title="")
     name: str = Field(..., title="")
     surname: str = Field(..., title="")
-    birthdate: datetime = Field(..., title="")
+    patron: str = Field(..., title="")
+    birthdate: str = Field(..., title="")
+    age: str = Field(..., title="")
     coldStart: bool = Field(..., title="")
 
     @classmethod
     def build_from_db(cls, obj: User) -> 'GetUserResponse':
+        def get_age(birthdate: str) -> str:
+            birthdate = datetime.strptime(birthdate, "%Y-%m-%d")
+            age = (datetime.now() - birthdate).days // 365
+            return age
+
+        birthdate = obj.bio.birthdate
         return cls(
-            id=obj.id,
-            created=obj.created,
-            gender=obj.bio.gender,
+            id=obj.user_id,
+            gender=not obj.bio.gender,
             name=obj.bio.name,
             surname=obj.bio.surname,
-            birthdate=obj.bio.birthdate,
-            coldStart=True if obj.profile.workdata.group_scores is None else False
+            patron=obj.bio.patron,
+            birthdate=birthdate,
+            age=get_age(obj.bio.birthdate),
+            coldStart=has_cold_start(obj)
         )
+
+
+class DemoUser(GetUserResponse):
+    pass
 
 
 class PostUserRequest(BaseModel):
@@ -87,10 +83,10 @@ class DaytimeSchedule(BaseModel):
 
 
 class PutUserSettingsRequest(BaseModel):
-    address: Optional[str] = Field(..., title="")
-    travelTime: Optional[int] = Field(..., title="")
-    schedule: Optional[List[DaytimeSchedule]] = Field(..., title="")
-    diseases: Optional[List[str]] = Field(..., title="")
+    address: Optional[str] = Field(None, title="")
+    travelTime: Optional[int] = Field(None, title="")
+    schedule: Optional[List[DaytimeSchedule]] = Field(None, title="")
+    diseases: Optional[List[str]] = Field(None, title="")
 
 
 class UserLocation(BaseModel):
@@ -120,5 +116,5 @@ class GetUserSettingsResponse(BaseModel):
             location=UserLocation.build_from_db(settings.address),
             travelTime=settings.travel_time,
             schedule=settings.schedule,
-            diseases=settings.diseases
+            diseases=settings.diseases or []
         )
